deploy: e44a8cf8d969356cc1173bba3d903b1f3fb74dd2

--- a/dev/apple-books/ios/access-library.html
+++ b/dev/apple-books/ios/access-library.html
@@ -228,9 +228,8 @@ number.</p>
 Starting with the iPhone X, Apple changed <code>UDID</code>s to use 24 bytes &gt; and a dash (<code>-</code>) instead of
 the old 40-byte format.</p>
 <p>If you get <code>Failed to connect to lockdownd service on the device. Try again. If it still fails try rebooting your device.</code> ensure that your device is connected, and isn't displaying a
-"Trust this computer" dialog. You'll need to approve that first. If you then get
-<code>ERROR: Device 000000000000000000000000 returned unhandled error code -13</code> you'll need to
-disconnect and reconnect the device.</p>
+"Trust this computer" dialog. You'll need to approve that first. If you then get <code>ERROR: Device 000000000000000000000000 returned unhandled error code -13</code> you'll need to disconnect and
+reconnect the device.</p>
 </blockquote>
 <p>via <a href="https://reincubate.com/support/how-to/mount-iphone-files/">https://reincubate.com/support/how-to/mount-iphone-files/</a></p>
 <h3 id="sources"><a class="header" href="#sources">Sources</a></h3>
