--- a/dev/apple-books/ios/archive-restore-library.html
+++ b/dev/apple-books/ios/archive-restore-library.html
@@ -168,8 +168,8 @@ version of iOS and the version the archive was created from are identical. Not d
 to unexpected results.</p>
 </blockquote>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> See <a href="/apple-books/ios/library-location.html">iOS - Library Location</a> and
-<a href="/apple-books/ios/access-library.html">iOS - Access Library</a> for more information.</p>
+<p><i class="fa fa-info-circle"></i> See <a href="/apple-books/ios/library-location.html">iOS - Library Location</a> and <a href="/apple-books/ios/access-library.html">iOS -
+Access Library</a> for more information.</p>
 </blockquote>
 
                     </main>
