--- a/dev/apple-books/ios/library-location.html
+++ b/dev/apple-books/ios/library-location.html
@@ -191,8 +191,7 @@ syncing with iCloud Drive is disabled!</p>
 <pre><code class="language-plaintext">[ios-device]/Books/com.apple.ibooks-sync.plist
 </code></pre>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> See <a href="/apple-books/ios/access-library.html">iOS - Access Library</a> for more
-information.</p>
+<p><i class="fa fa-info-circle"></i> See <a href="/apple-books/ios/access-library.html">iOS - Access Library</a> for more information.</p>
 </blockquote>
 
                     </main>
