--- a/dev/intro/commands.html
+++ b/dev/intro/commands.html
@@ -289,8 +289,7 @@ templates.</p>
 ]
 </code></pre>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> This <code>export</code> was run with the <a href="/intro/options/preprocess.html#--extract-tags"><code>--extract-tags</code></a>
-option.</p>
+<p><i class="fa fa-info-circle"></i> This <code>export</code> was run with the <a href="/intro/options/preprocess.html#--extract-tags"><code>--extract-tags</code></a> option.</p>
 </blockquote>
 <h2 id="backup"><a class="header" href="#backup"><code>backup</code></a></h2>
 <p>Back-up macOS's Apple Books databases.</p>
