--- a/dev/intro/options/backup.html
+++ b/dev/intro/options/backup.html
@@ -174,8 +174,8 @@
 nest a pipe <code>|</code> inside a markdown table. In other words, the default value does not contain
 a backslash.</p>
 </blockquote>
-<p>For example, using the default template, the non-rendered ouput structure would
-look like the following:</p>
+<p>For example, using the default template, the non-rendered ouput structure would look like the
+following:</p>
 <pre><code class="language-plaintext">[ouput-directory]
  └── {{ now | date(format='%Y-%m-%d-%H%M%S') }}-{{ version }}
       ├── AEAnnotation
