--- a/dev/intro/options/export.html
+++ b/dev/intro/options/export.html
@@ -169,8 +169,7 @@
 <tr><td>Example</td><td><code>Robert Henri - The Art Spirit</code></td></tr>
 </tbody></table>
 </div>
-<p>For example, using the default template, the non-rendered ouput structure would look like the
-following:</p>
+<p>For example, using the default template, the non-rendered ouput structure would look like the following:</p>
 <pre><code class="language-plaintext">[ouput-directory]
  ├── {{ book.author }} - {{ book.title }}
  │    ├── book.json
