--- a/dev/intro/options/global.html
+++ b/dev/intro/options/global.html
@@ -201,8 +201,8 @@ directory should follow the following structure:</p>
  └── ...
 </code></pre>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> See <a href="/apple-books/ios/library-location.html">iOS - Library Location</a> and
-<a href="/apple-books/ios/access-library.html">iOS - Access Library</a> on how to retrieve these files.</p>
+<p><i class="fa fa-info-circle"></i> See <a href="/apple-books/ios/library-location.html">iOS - Library Location</a> and <a href="/apple-books/ios/access-library.html">iOS -
+Access Library</a> on how to retrieve these files.</p>
 </blockquote>
 <h2 id="--force"><a class="header" href="#--force"><code>--force</code></a></h2>
 <p>Run even if Apple Books is currently running.</p>
