--- a/dev/intro/options/preprocess.html
+++ b/dev/intro/options/preprocess.html
@@ -166,8 +166,9 @@
 <p>All matches are removed from <a href="/templates/context-reference/annotation.html"><code>annotation.notes</code></a> and placed into
 <a href="/templates/context-reference/annotation.html"><code>annotation.tags</code></a>.</p>
 <blockquote>
-<p><i class="fa fa-exclamation-circle"></i> Tags <em>must</em> start with a hash symbol <code>#</code> followed by a
-letter <code>[a-zA-Z]</code>.</p>
+<p><i class="fa fa-exclamation-circle"></i> Tags <em>must</em> start with a hash symbol <code>#</code> followed by
+a letter <code>[a-zA-Z]</code> and then a series of any characters. A tag ends when a space or another <code>#</code>
+is encountered.</p>
 </blockquote>
 <h2 id="--normalize-whitespace"><a class="header" href="#--normalize-whitespace"><code>--normalize-whitespace</code></a></h2>
 <p>Normalize whitespace in <a href="/templates/context-reference/annotation.html"><code>annotation.body</code></a>.</p>
