--- a/dev/intro/commands.html
+++ b/dev/intro/commands.html
@@ -176,7 +176,7 @@ templates.</p>
 <p><i class="fa fa-info-circle"></i> See <a href="/intro/options/preprocess.html">Pre-process</a> options for available options.</p>
 </blockquote>
 <p>Outputs using the following structure:</p>
-<pre><code class="language-plaintext">[ouput-directory]
+<pre><code class="language-plaintext">[output-directory]
  ├── [author-title]
  │    ├── book.json
  │    └── annotations.json
@@ -186,7 +186,7 @@ templates.</p>
  └── ...
 </code></pre>
 <p>Example output structure:</p>
-<pre><code class="language-plaintext">[ouput-directory]
+<pre><code class="language-plaintext">[output-directory]
  ├── Krishnamurti - Think on These Things
  │   ├── annotations.json
  │   └── book.json
@@ -294,7 +294,7 @@ templates.</p>
 <h2 id="backup"><a class="header" href="#backup"><code>backup</code></a></h2>
 <p>Back-up macOS's Apple Books databases.</p>
 <p>Outputs using the following structure:</p>
-<pre><code class="language-plaintext">[ouput-directory]
+<pre><code class="language-plaintext">[output-directory]
  └── [YYYY-MM-DD-HHMMSS-VERSION]
       ├── AEAnnotation
       │   ├── AEAnnotation*.sqlite
@@ -304,7 +304,7 @@ templates.</p>
           └── ...
 </code></pre>
 <p>Example output:</p>
-<pre><code class="language-plaintext">[ouput-directory]
+<pre><code class="language-plaintext">[output-directory]
  └── 2022-10-09-152506-v4.4-5177
      ├── AEAnnotation
      │   ├── AEAnnotation_v10312011_1727_local.sqlite
@@ -320,7 +320,7 @@ templates.</p>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../intro/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../intro/quickstart.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -334,7 +334,7 @@ templates.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../intro/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../intro/quickstart.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
