--- a/dev/intro/options/render.html
+++ b/dev/intro/options/render.html
@@ -174,7 +174,7 @@ examples.</p>
 will return an error.</p>
 </blockquote>
 <p>Multiple <a href="/templates/configuration/template-groups.html">Template Groups</a> can be passed using the following syntax.</p>
-<pre><code class="language-bash">readstor \
+<pre><code class="language-bash">readstor
     # ...
     --template-group basic
     --template-group using-backlinks
